# SDL2Template

./: CMakeLists.txt  Game.hpp  Main.cpp
src/: Game.cpp  Game.hpp
